crates/gpui-form-macros/tests/ui/fail/invalid_custom_messages.stderr
error: `messages` is only supported by the Garde adapter
 --> tests/ui/fail/invalid_custom_messages.rs:4:43
  |
4 | #[form(validation(adapter = AppValidator, messages = AppMessageProvider))]
  |                                           ^^^^^^^^
